--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
