--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "npm-run-all": "^4.1.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "superagent": "^5.2.2"
   }
 }
