--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "jest": "^25.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "react-router-dom": "^5.1.2"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -53,6 +51,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "superagent": "^5.2.2"
+    "superagent": "^5.2.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
